[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Fonts/PixelOperatorMonoHB.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/UI/Menu/Menu.gd" type="Script" id=2]
[ext_resource path="res://Scenes/UI/CharacterSelector/CharacterSelector.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 128
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 64
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="MainMenuNode" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainTitle" type="Label" parent="MainMenuNode"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -352.0
margin_top = -264.0
margin_right = 352.0
margin_bottom = -136.0
custom_fonts/font = SubResource( 1 )
text = "DINO CHARGE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsContainer" type="VBoxContainer" parent="MainMenuNode"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -176.0
margin_top = -118.0
margin_right = 176.0
margin_bottom = 218.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelPlay" type="Label" parent="MainMenuNode/OptionsContainer"]
margin_right = 352.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "PLAY"

[node name="LabelRandomMap" type="Label" parent="MainMenuNode/OptionsContainer"]
margin_top = 68.0
margin_right = 352.0
margin_bottom = 132.0
custom_fonts/font = SubResource( 2 )
text = "RANDOM MAP"

[node name="LabelHowToPlay" type="Label" parent="MainMenuNode/OptionsContainer"]
margin_top = 136.0
margin_right = 352.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 2 )
text = "HOW TO PLAY"

[node name="LabelCredits" type="Label" parent="MainMenuNode/OptionsContainer"]
margin_top = 204.0
margin_right = 352.0
margin_bottom = 268.0
custom_fonts/font = SubResource( 2 )
text = "CREDITS"

[node name="LabelQuit" type="Label" parent="MainMenuNode/OptionsContainer"]
margin_top = 272.0
margin_right = 352.0
margin_bottom = 336.0
custom_fonts/font = SubResource( 2 )
text = "QUIT"

[node name="Selector" type="Label" parent="MainMenuNode"]
margin_left = 424.0
margin_top = 242.0
margin_right = 464.0
margin_bottom = 306.0
custom_fonts/font = SubResource( 3 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterSelection" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="CharacterSelection"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -608.0
margin_top = -264.0
margin_right = 608.0
margin_bottom = -136.0
custom_fonts/font = SubResource( 1 )
text = "CHARACTER SELECTION"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CharacterSelection"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -90.0
margin_right = -200.0
margin_bottom = -50.0
rect_scale = Vector2( 7, 7 )
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterSelector" parent="CharacterSelection/HBoxContainer" instance=ExtResource( 3 )]
margin_right = 0.0
margin_bottom = 40.0

[node name="CharacterSelector2" parent="CharacterSelection/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 40.0
margin_right = 40.0
margin_bottom = 40.0
